2010-02-17  Mike Gorse  <mgorse@novell.com>

	* Accessible.cs, Action.cs, Application.cs, Component.cs, Desktop.cs,
	Document.cs, EditableText.cs, EventDocument.cs, EventFocus.cs,
	EventKeyboard.cs, EventMouse.cs, EventObject.cs, EventTerminal.cs,
	EventWindow.cs, Hyperlink.cs, Hypertext.cs, Image.cs, Registry.cs,
	Selection.cs, Table.cs, Text.cs, Value.cs: org.freedesktop -> org.a11y
	to match at-spi2 0.1.7.

	* Application.cs, Registry.cs: Add Pid property (used by
	AtspiUiaSource).

	* DeviceEventController.cs, Registry.cs, Makefile.am:
	Add DeviceEventController.

2010-02-09  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* Makefile.am:
	* at-spi-sharp.dll.config.in: Add a .dll.config file for ndesk-dbus.

2010-02-05  Mike Gorse  <mgorse@novell.com>

	* EventBase.cs: Track at-spi2 api.

	* Accessible.cs: Fetch interfaces when unknown.

	* Accessible.cs, Registry.cs: Fix some crashes.

2010-02-04  Mike Gorse  <mgorse@novell.com>

	* Accessible.cs: Fetch Parent, Name, and Description if we do not
	have cached data for them.

	* Accessible.cs, Application.cs: Fix several exceptions.

	* Registry.cs: Do not create an appliation for an element with no bus
	name.

	* Registry.cs: Make GetAtspiBus internal to be compatible with
	our ndesk-dbus fork.

2010-02-03  Mike Gorse  <mgorse@novell.com>

	* EventBase.cs, EventDocument.cs, EventFocus.cs, EventKeyboard.cs,
	EventMouse.cs, EventObject.cs, EventTerminal.cs, EventWindow.cs,
	Makefile.am: Track at-spi event api, and add wrappers to remove unused
	parameters.

	* StateSet.cs, StateType.cs: use [System.Flags]

	* Table.cs: Fix Caption and Summary.

	* Component.cs, RelationSet.cs, Selection.cs, Table.cs: Internal GetElement refactoring.

	* Accessible.cs, Application.cs, Hypertext.cs: Track at-spi api.

2009-12-03  Mike Gorse  <mgorse@novell.com>

	* Desktop.cs: Remove "On" prefix from event names.

2009-11-24  Mike Gorse  <mgorse@novell.com>

	* Accessible.cs: Fix firing of ChildAdded.
